--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -1,22 +1,34 @@
 <div class="col-md-12 terrama2-nopadding-box">
   <form name="myForm">
-    <label>
+    <label style="margin-left: 19px;">
         <input type="radio" ng-model="$ctrl.creationMode" ng-value="true" ng-change="$ctrl.changeMode()">
-        Creation
+        {{$ctrl.i18n.__('Edition')}}
     </label>
-    <label>
+    <label style="margin-left: 20px;">
         <input type="radio" ng-model="$ctrl.creationMode" ng-value="false" ng-change="$ctrl.changeMode()">
-        XML Style
+        {{$ctrl.i18n.__('XML Style')}}
     </label>
   </form>
 </div>
 
 <div ng-if="!$ctrl.creationMode">
-  <div class="col-md-6 terrama2-nopadding-box">
-    <div class="form-group">
-      <label> XML: </label>
-      <textarea class="form-control" ng-model="$ctrl.model.metadata.xmlStyle"> </textarea>
+  <div class="col-md-12 terrama2-nopadding-box">
+
+    <div class="col-md-8">
+      <div class="form-group">
+        <label> {{$ctrl.i18n.__('XML') }}:</label>
+        <textarea class="form-control" ng-model="$ctrl.model.metadata.xmlStyle" style="height: 200px;"> </textarea>
+      </div>
     </div>
+
+    <div class="col-md-4 form-group">
+      <label>Styles:</label>
+      <select class="form-control" name="styles" ng-change="$ctrl.onStyleChange()" ng-model="$ctrl.styleId">
+          <option value="0">{{$ctrl.i18n.__('New')}}</option>
+          <option value="1">{{$ctrl.i18n.__('Wind')}}</option>
+      </select>
+    </div>
+
   </div>
 </div>
 
