--- a/webapp/public/javascripts/angular/views/templates/style.html
+++ b/webapp/public/javascripts/angular/views/templates/style.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 form-group">
-    <label>Creation Type:</label>
+    <label>{{$ctrl.i18n.__('Creation Type') }}:</label>
     <select class="form-control" name="styles" ng-change="$ctrl.changeCreationType()" ng-model="$ctrl.model.metadata.creation_type">
         <option value="0">{{$ctrl.i18n.__('Editor')}}</option>
         <option value="1">{{$ctrl.i18n.__('XML')}}</option>
