--- a/webapp/views/configuration/alert.html
+++ b/webapp/views/configuration/alert.html
@@ -112,7 +112,7 @@
             </div> <!-- ./col-md-2 -->
           </div><!-- ./col-md-12 -->
           <div class="col-md-12">
-            <div class="col-md-10">
+            <div class="col-md-12">
               <div class="form-group">
                 <label><span ng-bind="i18n.__('Description')"></span>:</label>
                 <textarea class="form-control"
@@ -123,22 +123,48 @@
               </div>
               <!-- /.form-group -->
             </div>
+          </div>
 
+          <div class="col-md-12">
             <div class="col-md-2">
               <div class="form-group">
                 <div class="checkbox">
                   <label style="font-weight: 700; margin-top:19px;">
                     <input type="checkbox"
-                           name="create_view"
-                           ng-model="ctrl.alert.hasView"
-                           ng-true-value="true"
-                           ng-false-value="false"> <span ng-bind="i18n.__('Create View')"></span>
+                            name="create_view"
+                            ng-model="ctrl.alert.hasView"
+                            ng-true-value="true"
+                            ng-false-value="false"> <span ng-bind="i18n.__('Create View')"></span>
                   </label>
                 </div>
               </div>
             </div> <!-- ./col-md-2 -->
+            
+            <div ng-if="ctrl.alert.hasView" class="col-md-4">
+              <div class="form-group" terrama2-show-errors>
+                <label><span ng-bind="i18n.__('View Service')">:</span></label>
+                <ui-select name="viewService"
+                        ng-model="ctrl.view_service_instance_id"
+                        required>
+                  <ui-select-match>
+                    <img ng-src="{[ BASE_URL ]}images/services/view/view_service.png" style="height: 20px; margin-top: -7px;"/>
+                    <span ng-bind="$select.selected.name"></span>
+                  </ui-select-match>
+                  <ui-select-choices repeat="instance.id as instance in (ctrl.filteredViewServices | filter: {'name': $select.search}) track by instance.id">
+                    <img ng-src="{[ BASE_URL ]}images/services/view/view_service.png" style="height: 20px;"/>
+                    <span ng-bind="instance.name"></span>
+                  </ui-select-choices>
+                </ui-select>
+
+                <span class="help-block"
+                      ng-show="forms.alertForm.viewService.$dirty && forms.alertForm.viewService.$error.required"
+                      ng-bind="i18n.__('View Service is required')">
+                </span>
+              </div>
+            </div> <!-- ./col-md-5 -->
 
           </div>
+
         </div>
       </form>
     </terrama2-box>
@@ -240,24 +266,24 @@
               <textarea class="form-control" name="riskDescription" ng-model="ctrl.riskModel.description" rows="3" placeholder="{{ i18n.__('Risk Description') }}"></textarea>
             </div>
           </div>
-          <span ng-repeat="level in ctrl.riskModel.levels">
+          <span ng-repeat="level in ctrl.riskModel.levels track by $index">
             <div class="col-md-12 row">
-              <div class="col-md-4">
+              <div ng-class="{'col-md-6': !ctrl.alert.hasView, 'col-md-4': ctrl.alert.hasView}">
                 <div class="form-group" ng-class="{'has-error': ctrl.riskLevelNameError[level._id]}">
                   <label><span ng-bind="i18n.__('Level Name')"></span>:</label>
                   <input class="form-control" name="levelName{{ level._id }}" ng-model="level.name" type="text" placeholder="{{ i18n.__('Level Name') }}">
                 </div>
               </div>
-              <div class="col-md-4">
+              <div ng-class="{'col-md-5': !ctrl.alert.hasView, 'col-md-4': ctrl.alert.hasView}">
                 <div ng-show="!level.isDefault" class="form-group" ng-class="{'has-error': ctrl.riskLevelValueError[level._id] || ctrl.riskLevelOrderError}">
                   <label><span ng-bind="i18n.__('Risk Value')"></span>:</label>
                   <input class="form-control" name="levelValue{{ level._id }}" ng-model="level.value" type="number" placeholder="{{ i18n.__('Risk Value') }}">
                 </div>
               </div>
-              <div class="col-md-3">
+              <div ng-if="ctrl.alert.hasView" class="col-md-3">
                 <div class="form-group">
                   <label><span ng-bind="i18n.__('Color')"></span>:</label>
-                  <color-picker ng-model="ctrl.color" options="ctrl.defaultColorOpts" event-api="ctrl.events"></color-picker>
+                  <color-picker ng-model="ctrl.colors[$index]" options="ctrl.defaultColorOpts" event-api="ctrl.events"></color-picker>
                 </div>
               </div>
               <div class="col-md-1">
